Enable --help support for specific command.